--- a/frontend/src/style/news_list.css
+++ b/frontend/src/style/news_list.css
@@ -6,24 +6,47 @@
 #search_title {
   font-size: 40px;
   font-family: "Raleway", sans-serif;
+  word-wrap: break-word;
+  white-space: pre-wrap;
 }
 /* Big input font size */
 #search_input {
   font-size: 25px;
   font-family: "Raleway", sans-serif;
+  word-wrap: break-word;
+  white-space: pre-wrap;
 }
 
 /* Big Text font size */
 
 .news_title {
-  font-size: 20px;
+  font-size: 15px;
   font-family: "Raleway", sans-serif;
   font-weight: bold;
 }
+
+.news_title p {
+  text-overflow: ellipsis;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
+
 /* Small Text font size */
 .news_desc {
   font-size: 10px;
   font-family: "Raleway", sans-serif;
+  word-wrap: break-word;
+  white-space: pre-wrap;
+}
+
+.news_desc p {
+  text-overflow: ellipsis;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 4;
+  -webkit-box-orient: vertical;
 }
 
 /* Style for Newslist */
@@ -92,14 +115,19 @@
   width: 200px;
   height: 200px;
   margin: 50px;
+  padding: 10px;
   background-color: lightcoral;
   box-shadow: 0px 0px 5px black;
   border-radius: 10px;
 }
 
+.news_items:hover {
+  box-shadow: 0px 0px 5px black inset;
+}
+
 .news_title {
   width: 100%;
-  height: 30px;
+  height: 50px;
 }
 
 .news_frame {
@@ -116,5 +144,5 @@
 
 .news_desc {
   width: 100%;
-  height: 70px;
+  height: 50px;
 }
