implement a simple sentiment display, allowing clicking to switch views (last/trend)

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,8 +7,13 @@ body,
   margin: 0;
 }
 
+/* disable scrolling in root div, but allow in sub div */
 #right-contents {
   overflow: hidden;
+}
+
+#sentiments {
+  overflow: auto;
 }
 
 /* Hide Scroll Bar */
