--- a/frontend/src/style/nav.css
+++ b/frontend/src/style/nav.css
@@ -17,6 +17,9 @@
 }
 
 #nav_content {
+  flex: 1 1 auto;
+  overflow-y: auto;
+  height: 0px;
   min-width: 150px;
   height: auto;
   display: inline-block;
