--- a/frontend/src/style/news_list.css
+++ b/frontend/src/style/news_list.css
@@ -105,12 +105,16 @@
 /* Style for item list */
 #content_div {
   width: 100%;
-  height: auto;
+  height: calc(100vh - 200px);
   align-items: flex-start;
+  justify-content: start;
+
+  overflow: auto;
 }
 
 .item_row {
   width: 100%;
+  height: 300px;
 }
 
 .news_items {
